--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -165,7 +165,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-    color: #47b2e4;
+    color: #e9323e;
 }
 
 .nav-menu .drop-down ul {
@@ -564,7 +564,7 @@ section {
     display: block;
     width: 40px;
     height: 3px;
-    background: #47b2e4;
+    background: #e9323e;
     bottom: 0;
     left: calc(50% - 20px);
 }
@@ -1203,7 +1203,7 @@ section {
     text-decoration: line-through;
 }
 
-.pricing .buy-btn {
+.pricing .buy-btn, #services .buy-btn {
     display: inline-block;
     padding: 12px 35px;
     border-radius: 50px;
@@ -1216,7 +1216,7 @@ section {
     border: 1px solid #47b2e4;
 }
 
-.pricing .buy-btn:hover {
+.pricing .buy-btn:hover, #services .buy-btn:hover {
     background: #47b2e4;
     color: #fff;
 }
@@ -1405,7 +1405,7 @@ section {
     color: #fff;
 }
 
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i, .contact .info .facebook:hover i, .contact .info .google:hover i  {
     background: #47b2e4;
     color: #fff;
 }
@@ -1493,7 +1493,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-    background: #47b2e4;
+    background: #e9323e;
     border: 0;
     padding: 12px 34px;
     color: #fff;
@@ -1502,7 +1502,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-    background: #209dd8;
+    background: #c21723;
 }
 
 @-webkit-keyframes animate-loading {
